--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <title>Blog Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+
     <header>
-      <h1>Adventure</h1>
+        <h1>Expedition</h1>
     </header>
 
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
