--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Adventure</h1>
+        <h1>Changed Master Heading</h1>
     </header>
 
     <div class="container">
