--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Use this heading-update test header - Quest</h1>
+        <h1>I want to reset this</h1>
     </header>
 
     <div class="container">
