REVERT this commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>I want to reset this</h1>
+        <h1>I want to REVERT this this</h1>
     </header>
 
     <div class="container">
